tests/lime/fail/tokens/label_first/byte_255.wsa
jmp .ÿ .ÿ: push 255
